--- a/api/build.gradle
+++ b/api/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     implementation"com.squareup.moshi:moshi-kotlin:$moshi_version"
     kapt"com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     testImplementation 'junit:junit:4.+'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
 }
