--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,11 +5,12 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
@@ -17,4 +18,6 @@ dependencies {
     kapt"com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     testImplementation 'junit:junit:4.+'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+
+
 }
